<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ControleDeEstoque</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- activity cadastro -->
    <string name="cadastroDeProduto">CADASTRO DE PRODUTO</string>
    <string name="nome">NOME DO PRODUTO</string>
    <string name="fabricante">FABRICANTE(Marca)</string>
    <string name="unidadeDeMedida">UNIDADE DE MEDIDA</string>
    <string name="quantidade">QUANTIDADE</string>
    <string name="incluir">INCLUIR</string>
    
    <!-- Spinner da activty cadastro -->
    <string-array name="UnidadedeMedida">
    <item>Kg</item>
    <item>g</item>
    <item>L</item>
    <item>ml</item>
    <item>valor absoluto</item>
    </string-array>

</resources>
