<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff0f0"
    android:padding="15dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/lbCadastrarProduto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="45dp"
                android:text="@string/cadastroDeProduto" 
                style="@style/lbactivity_cadastro"
                />

            <TextView
                android:id="@+id/lbNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome" />

            <EditText
                android:id="@+id/et_Nome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:maxLength="255"
                android:inputType="" />     
          
            <TextView
                android:id="@+id/lbMarca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fabricante" />

            <EditText
                android:id="@+id/etMarca"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:maxLength="255"
                 android:inputType="" />

            <TextView
                android:id="@+id/lbUnidadeDeMedida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/unidadeDeMedida" />

            <TextView
                android:id="@+id/lbQuantidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantidade" />

            <EditText
                android:id="@+id/etQuantidade"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLength="255"
                android:inputType="" />

            <Button
                android:id="@+id/btCadastrar"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:text="@string/incluir" />

        </LinearLayout>
 
</FrameLayout>

